added some of the information

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         </ul>
         
         <div class="nav-cta">
-            <a href="#" class="btn btn-outline">Sign In</a>
-            <a href="#" class="btn btn-primary">Get Protected</a>
+            <a href="pages/signin.html" class="btn btn-outline">Sign In</a>
+            <a href="pages/download.html" class="btn btn-primary">Get Protected</a>
         </div>
     </nav>
 
@@ -74,8 +74,8 @@
             <h1>Complete Protection for Your <span>Digital Life</span></h1>
             <p>LindAV delivers enterprise-grade security to your Android device. Real-time threat detection, privacy protection, and performance optimization - all in one powerful app.</p>
             <div class="hero-buttons">
-                <a href="#" class="btn btn-primary btn-large">Download Free</a>
-                <a href="#" class="btn btn-outline btn-large">Watch Demo</a>
+                <a href="pages/download.html" class="btn btn-primary btn-large">Download Free</a>
+                <a href="#product" class="btn btn-outline btn-large">Watch Demo</a>
             </div>
         </div>
         <div class="hero-visual">
@@ -219,7 +219,7 @@
                         <span>24/7 customer support from security experts</span>
                     </li>
                 </ul>
-                <a href="#" class="btn btn-primary btn-large">Get LindAV Now</a>
+                <a href="pages/download.html" class="btn btn-primary btn-large">Get LindAV Now</a>
             </div>
         </div>
     </section>
@@ -243,7 +243,7 @@
                     <li>Safe browsing</li>
                     <li>Community support</li>
                 </ul>
-                <a href="#" class="btn btn-outline btn-full">Get Started</a>
+                <a href="pages/signup.html" class="btn btn-outline btn-full">Get Started</a>
             </div>
             <div class="price-card featured">
                 <div class="price-name">Premium</div>
@@ -257,7 +257,7 @@
                     <li>Battery optimizer</li>
                     <li>Priority support</li>
                 </ul>
-                <a href="#" class="btn btn-primary btn-full">Start Free Trial</a>
+                <a href="pages/signup.html" class="btn btn-primary btn-full">Start Free Trial</a>
             </div>
             <div class="price-card">
                 <div class="price-name">Enterprise</div>
@@ -271,7 +271,7 @@
                     <li>API access</li>
                     <li>Dedicated support</li>
                 </ul>
-                <a href="#" class="btn btn-outline btn-full">Contact Sales</a>
+                <a href="pages/contact.html" class="btn btn-outline btn-full">Contact Sales</a>
             </div>
         </div>
     </section>
@@ -323,8 +323,8 @@
             <h2>Ready to Secure Your Device?</h2>
             <p>Join over 50 million users who trust LindAV with their digital security. Download now and get protected in seconds.</p>
             <div class="cta-buttons">
-                <a href="#" class="btn btn-primary btn-large">Download Free</a>
-                <a href="#" class="btn btn-outline btn-large">Learn More</a>
+                <a href="pages/download.html" class="btn btn-primary btn-large">Download Free</a>
+                <a href="#features" class="btn btn-outline btn-large">Learn More</a>
             </div>
         </div>
     </section>
@@ -344,36 +344,36 @@
                 <ul>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#">Download</a></li>
-                    <li><a href="#">Enterprise</a></li>
+                    <li><a href="pages/download.html">Download</a></li>
+                    <li><a href="pages/contact.html">Enterprise</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>Company</h4>
                 <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Press</a></li>
+                    <li><a href="pages/about.html">About Us</a></li>
+                    <li><a href="pages/careers.html">Careers</a></li>
+                    <li><a href="pages/blog.html">Blog</a></li>
+                    <li><a href="pages/press.html">Press</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>Support</h4>
                 <ul>
-                    <li><a href="#">Help Center</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="pages/help.html">Help Center</a></li>
+                    <li><a href="pages/contact.html">Contact</a></li>
+                    <li><a href="pages/privacy.html">Privacy Policy</a></li>
+                    <li><a href="pages/terms.html">Terms of Service</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2026 JERMAN. All rights reserved.</p>
             <div class="social-links">
-                <a href="#" aria-label="Twitter">𝕏</a>
-                <a href="#" aria-label="Facebook">f</a>
-                <a href="#" aria-label="LinkedIn">in</a>
-                <a href="#" aria-label="GitHub">⌘</a>
+                <a href="https://twitter.com/jaborman" target="_blank" aria-label="Twitter">𝕏</a>
+                <a href="https://facebook.com/jerman" target="_blank" aria-label="Facebook">f</a>
+                <a href="https://linkedin.com/company/jerman" target="_blank" aria-label="LinkedIn">in</a>
+                <a href="https://github.com/Tembocs" target="_blank" aria-label="GitHub">⌘</a>
             </div>
         </div>
     </footer>
