Update favicon and background images for professional look

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <title>JERMAN | LindAV - Complete Android Security Solution</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/ChatGPT Icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/ChatGPT Icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/ChatGPT Icon.png">
+    <link rel="shortcut icon" href="images/ChatGPT Icon.png">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
